added sections & classes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    <h1></h1>
+    <h1>Weather Dashboard</h1>
+    <section class="searchForCity">
+    </section>
+    <section class="weatherCurrent"></section>
+    <section class="weatherForecast"></section>
 </body>
     <script src="./assets/script.js"></script>
 </html>
