added sections & classes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1>Weather Dashboard</h1>
-    <section class="searchForCity">
-    </section>
+    <section class="searchForCity"></section>
     <section class="weatherCurrent"></section>
     <section class="weatherForecast"></section>
 </body>
