--- a/index.html
+++ b/index.html
@@ -11,5 +11,42 @@
         <input type="text" id="city" name="city" required>
         <button type="submit">Search</button>
       </form>
+
+      <div>
+        <div>
+            <h1>Current weather</h1>
+            <h2>Temperature: __ °F</h2>
+            <h2>Wind: __ MPH</h2>
+            <h2>Humidity: __ %</h2>
+        </div>
+        <div>
+            <h2>5-Day Forecast</h2>
+            <div>
+                <h2>picture here</h2>
+                <h3>Temperature: __ °F</h3>
+                <h3>Wind: __ MPH</h3>
+                <h3>Humidity: __ %</h3>
+            </div>
+            <div>
+                <h2>picture here</h2>
+                <h3>Temperature: __ °F</h3>
+                <h3>Wind: __ MPH</h3>
+                <h3>Humidity: __ %</h3>
+            </div>
+            <div>
+                <h2>picture here</h2>
+                <h3>Temperature: __ °F</h3>
+                <h3>Wind: __ MPH</h3>
+                <h3>Humidity: __ %</h3>
+            </div>
+            <div>
+                <h2>picture here</h2>
+                <h3>Temperature: __ °F</h3>
+                <h3>Wind: __ MPH</h3>
+                <h3>Humidity: __ %</h3>
+            </div>
+        </div>
+      </div>
+
 </body>
 </html>
