--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Dashboard</title>
+    <title>Weather App</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <form>
@@ -47,7 +48,6 @@
             </div>
         </div>
       </div>
-
 </body>
     <script src="./assets/script.js"></script>
 </html>
