--- a/index.html
+++ b/index.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <link rel="stylesheet" href="./assets/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/style.css" />
+  </head>
+  <body>
     <form>
-        <label for="city">Enter city name:</label>
-        <input type="text" id="city" name="city" required>
-        <button type="submit">Search</button>
-      </form>
+      <label for="city">Enter city name:</label>
+      <input type="text" id="city" name="city" required />
+      <button type="submit">Search</button>
+    </form>
 
+    <div>
       <div>
+        <h1>Current weather</h1>
+        <h2>Temperature: __ °F</h2>
+        <h2>Wind: __ MPH</h2>
+        <h2>Humidity: __ %</h2>
+      </div>
+      <div>
+        <h2>5-Day Forecast</h2>
         <div>
-            <h1>Current weather</h1>
-            <h2>Temperature: __ °F</h2>
-            <h2>Wind: __ MPH</h2>
-            <h2>Humidity: __ %</h2>
+          <h2>picture here</h2>
+          <h3>Temperature: __ °F</h3>
+          <h3>Wind: __ MPH</h3>
+          <h3>Humidity: __ %</h3>
         </div>
         <div>
-            <h2>5-Day Forecast</h2>
-            <div>
-                <h2>picture here</h2>
-                <h3>Temperature: __ °F</h3>
-                <h3>Wind: __ MPH</h3>
-                <h3>Humidity: __ %</h3>
-            </div>
-            <div>
-                <h2>picture here</h2>
-                <h3>Temperature: __ °F</h3>
-                <h3>Wind: __ MPH</h3>
-                <h3>Humidity: __ %</h3>
-            </div>
-            <div>
-                <h2>picture here</h2>
-                <h3>Temperature: __ °F</h3>
-                <h3>Wind: __ MPH</h3>
-                <h3>Humidity: __ %</h3>
-            </div>
-            <div>
-                <h2>picture here</h2>
-                <h3>Temperature: __ °F</h3>
-                <h3>Wind: __ MPH</h3>
-                <h3>Humidity: __ %</h3>
-            </div>
+          <h2>picture here</h2>
+          <h3>Temperature: __ °F</h3>
+          <h3>Wind: __ MPH</h3>
+          <h3>Humidity: __ %</h3>
+        </div>
+        <div>
+          <h2>picture here</h2>
+          <h3>Temperature: __ °F</h3>
+          <h3>Wind: __ MPH</h3>
+          <h3>Humidity: __ %</h3>
+        </div>
+        <div>
+          <h2>picture here</h2>
+          <h3>Temperature: __ °F</h3>
+          <h3>Wind: __ MPH</h3>
+          <h3>Humidity: __ %</h3>
         </div>
       </div>
+    </div>
     <h1></h1>
-</body>
-    <script src="./assets/script.js"></script>
+  </body>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="./assets/script.js"></script>
 </html>
