--- a/index.html
+++ b/index.html
@@ -5,50 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="./assets/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <form>
-        <label for="city">Enter city name:</label>
-        <input type="text" id="city" name="city" required>
-        <button type="submit">Search</button>
-      </form>
-
-      <div>
-        <div>
-            <h1>Current weather</h1>
-            <h2>Temperature: __ °F</h2>
-            <h2>Wind: __ MPH</h2>
-            <h2>Humidity: __ %</h2>
-        </div>
-        <div>
-            <h2>5-Day Forecast</h2>
-            <div>
-                <h2>picture here</h2>
-                <h3>Temperature: __ °F</h3>
-                <h3>Wind: __ MPH</h3>
-                <h3>Humidity: __ %</h3>
-            </div>
-            <div>
-                <h2>picture here</h2>
-                <h3>Temperature: __ °F</h3>
-                <h3>Wind: __ MPH</h3>
-                <h3>Humidity: __ %</h3>
-            </div>
-            <div>
-                <h2>picture here</h2>
-                <h3>Temperature: __ °F</h3>
-                <h3>Wind: __ MPH</h3>
-                <h3>Humidity: __ %</h3>
-            </div>
-            <div>
-                <h2>picture here</h2>
-                <h3>Temperature: __ °F</h3>
-                <h3>Wind: __ MPH</h3>
-                <h3>Humidity: __ %</h3>
-            </div>
-        </div>
+  <h1>Weather Dashboard</h1>
+  <section class="searchForCity"></section>
+  <div class="container mt-5">
+      <div class="row justify-content-left">
+          <div class="col-md-6">
+              <div class="input-group mb-3">
+                  <input type="text" class="form-control" placeholder="Search for a city or town" aria-label="Search" aria-describedby="basic-addon2">
+                  <button class="btn btn-primary" type="button">Search</button>
+              </div>
+          </div>
       </div>
-    <h1></h1>
+  </div>    
+  <section class="weatherCurrent">
+      <div class="container1">
+          <h2>12/7/23 
+              <img src="" alt=""> <br>
+              Temp: F <br>
+              Wind: MPH <br>
+              Humidity: %
+          </h2>
+      </div>
+  </section>
+  <section class="weatherForecast">
+      <div class="container">
+          <div class="row">
+            <div class="col-sm">
+              Date<br>
+              <img src="" alt=""><br>
+              Temp: Farrenheit<br>
+              Wind: MPH<br>
+              Humidity: %
+            </div>
+            <div class="col-sm">
+              Date<br>
+              <img src="" alt=""><br>
+              Temp: Farrenheit<br>
+              Wind: MPH<br>
+              Humidity: %
+            </div>
+            <div class="col-sm">
+              Date<br>
+              <img src="" alt=""><br>
+              Temp: Farrenheit<br>
+              Wind: MPH<br>
+              Humidity: %
+            </div>
+            <div class="col-sm">
+              Date<br>
+              <img src="" alt=""><br>
+              Temp: Farrenheit<br>
+              Wind: MPH<br>
+              Humidity: %
+            </div>
+            <div class="col-sm">
+              Date<br>
+              <img src="" alt=""><br>
+              Temp: Farrenheit<br>
+              Wind: MPH<br>
+              Humidity: %
+            </div>
+          </div>
+        </div>
+  </section>
 </body>
     <script src="./assets/script.js"></script>
 </html>
