--- a/index.html
+++ b/index.html
@@ -1,79 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-  <h1>Weather Dashboard</h1>
-  <section class="searchForCity"></section>
-  <div class="container mt-5">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <h1>Weather Dashboard</h1>
+    <section class="searchForCity"></section>
+    <div class="container mt-5">
       <div class="row justify-content-left">
-          <div class="col-md-6">
-              <div class="input-group mb-3">
-                  <input type="text" class="form-control" placeholder="Search for a city or town" aria-label="Search" aria-describedby="basic-addon2">
-                  <button class="btn btn-primary" type="button">Search</button>
-              </div>
-          </div>
-      </div>
-  </div>    
-  <section class="weatherCurrent">
-      <div class="container1">
-          <h2>12/7/23 
-              <img src="" alt=""> <br>
-              Temp: F <br>
-              Wind: MPH <br>
-              Humidity: %
-          </h2>
-      </div>
-  </section>
-  <section class="weatherForecast">
-      <div class="container">
-          <div class="row">
-            <div class="col-sm">
-              Date<br>
-              <img src="" alt=""><br>
-              Temp: Farrenheit<br>
-              Wind: MPH<br>
-              Humidity: %
-            </div>
-            <div class="col-sm">
-              Date<br>
-              <img src="" alt=""><br>
-              Temp: Farrenheit<br>
-              Wind: MPH<br>
-              Humidity: %
-            </div>
-            <div class="col-sm">
-              Date<br>
-              <img src="" alt=""><br>
-              Temp: Farrenheit<br>
-              Wind: MPH<br>
-              Humidity: %
-            </div>
-            <div class="col-sm">
-              Date<br>
-              <img src="" alt=""><br>
-              Temp: Farrenheit<br>
-              Wind: MPH<br>
-              Humidity: %
-            </div>
-            <div class="col-sm">
-              Date<br>
-              <img src="" alt=""><br>
-              Temp: Farrenheit<br>
-              Wind: MPH<br>
-              Humidity: %
-            </div>
+        <div class="col-md-6">
+          <div class="input-group mb-3">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Search for a city or town"
+              aria-label="Search"
+              aria-describedby="basic-addon2"
+            />
+            <button class="btn btn-primary" type="button">Search</button>
           </div>
         </div>
-  </section>
-</body>
-    <script src="./assets/script.js"></script>
+      </div>
+    </div>
+    <section class="weatherCurrent">
+      <div class="container1">
+        <h2>
+          12/7/23 <img src="" alt="" /> <br />
+          Temp: F <br />
+          Wind: MPH <br />
+          Humidity: %
+        </h2>
+      </div>
+    </section>
+    <section class="weatherForecast">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            Date<br />
+            <img src="" alt="" /><br />
+            Temp: Farrenheit<br />
+            Wind: MPH<br />
+            Humidity: %
+          </div>
+          <div class="col-sm">
+            Date<br />
+            <img src="" alt="" /><br />
+            Temp: Farrenheit<br />
+            Wind: MPH<br />
+            Humidity: %
+          </div>
+          <div class="col-sm">
+            Date<br />
+            <img src="" alt="" /><br />
+            Temp: Farrenheit<br />
+            Wind: MPH<br />
+            Humidity: %
+          </div>
+          <div class="col-sm">
+            Date<br />
+            <img src="" alt="" /><br />
+            Temp: Farrenheit<br />
+            Wind: MPH<br />
+            Humidity: %
+          </div>
+          <div class="col-sm">
+            Date<br />
+            <img src="" alt="" /><br />
+            Temp: Farrenheit<br />
+            Wind: MPH<br />
+            Humidity: %
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="./assets/script.js"></script>
 </html>
