--- a/index.html
+++ b/index.html
@@ -18,20 +18,18 @@
   </head>
   <body>
     <h1>Weather Dashboard</h1>
+    <section clas="citySearchH2Container">
     <section class="searchForCity">
-      <div class="container mt-5">
           <div class="row justify-content-left">
               <div class="col-md-6">
                   <div class="input-group mb-3">
-                      <input type="text" id="cityInput" class="form-control" placeholder="Search for a city or town">
+                      <input type="text" id="cityInput" class="form-control" placeholder="Search for a city or town. E.g. Los Angeles, California">
                       <button class="btn btn-primary" type="button" onclick="addCityBtn()">Search</button>
                   </div>
                   <div id="cityButtonsContainer" class="mt-3"></div>
               </div>
           </div>
-      </div>
   </section>
-    <section class="weatherCurrent">
       <div class="container1">
         <h2>
           12/7/23 <img src="" alt="" /> <br />
@@ -40,7 +38,7 @@
           Humidity: %
         </h2>
       </div>
-    </section>
+  </section>
     <section class="weatherForecast">
       <div class="container">
         <div class="row">
