--- a/index.html
+++ b/index.html
@@ -29,13 +29,7 @@
                 class="form-control"
                 placeholder="Search for a city or town. E.g. Los Angeles, California"
               />
-              <button
-                class="btn btn-primary"
-                type="button"
-                onclick="addCityBtn()"
-              >
-                Search
-              </button>
+              <button class="btn btn-primary" type="button">Search</button>
             </div>
             <div id="button" class="mt-3"></div>
           </div>
