--- a/index.html
+++ b/index.html
@@ -36,52 +36,17 @@
         </div>
       </section>
       <div class="container1">
-        <h2>
-          12/7/23 <img src="" alt="" /> <br />
-          Temp: F <br />
-          Wind: MPH <br />
-          Humidity: %
-        </h2>
+        <h2 class="today"></h2>
       </div>
     </section>
     <section class="weatherForecast">
       <div class="container">
         <div class="row">
-          <div class="col-sm">
-            Date<br />
-            <img src="" alt="" /><br />
-            Temp: Farrenheit<br />
-            Wind: MPH<br />
-            Humidity: %
-          </div>
-          <div class="col-sm">
-            Date<br />
-            <img src="" alt="" /><br />
-            Temp: Farrenheit<br />
-            Wind: MPH<br />
-            Humidity: %
-          </div>
-          <div class="col-sm">
-            Date<br />
-            <img src="" alt="" /><br />
-            Temp: Farrenheit<br />
-            Wind: MPH<br />
-            Humidity: %
-          </div>
-          <div class="col-sm">
-            Date<br />
-            <img src="" alt="" /><br />
-            Temp: Farrenheit<br />
-            Wind: MPH<br />
-            Humidity: %
-          </div>
-          <div class="col-sm">
-            Date<br />
-            <img src="" alt="" /><br />
-            Temp: Farrenheit<br />
-            Wind: MPH<br />
-            Humidity: %
-          </div>
+          <div class="col-sm day1"></div>
+          <div class="col-sm day2"></div>
+          <div class="col-sm day3"></div>
+          <div class="col-sm day4"></div>
+          <div class="col-sm day5"></div>
         </div>
       </div>
     </section>
