--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-  </head>
+  </head> 
   <body>
+    <header>
     <h1>Weather Dashboard</h1>
     <section clas="citySearchH2Container">
       <section class="searchForCity">
@@ -34,11 +36,18 @@
             <div id="button" class="mt-3"></div>
           </div>
         </div>
-      </section>
       <div class="container1">
-        <h2 class="today"></h2>
+        <div class="today">
+          <div class="city">
+              <span class="city-name"></span>
+              <span class="wind-speed"></span>
+              <span class="humidity"></span>
+          </div>
       </div>
+      </div>
+      </section>
     </section>
+    </header>
     <section class="weatherForecast">
       <div class="container">
         <div class="row">
