--- a/index.html
+++ b/index.html
@@ -10,43 +10,46 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-  </head> 
+  </head>
   <body>
     <header>
-    <h1>Weather Dashboard</h1>
-    <section clas="citySearchH2Container">
-      <section class="searchForCity">
-        <div class="row justify-content-left">
-          <div class="col-md-6">
-            <div class="input-group mb-3">
-              <input
-                type="text"
-                id="cityInput"
-                class="form-control"
-                placeholder="Search for a city or town. E.g. Los Angeles, California"
-              />
-              <button class="btn btn-primary" type="button">Search</button>
+      <h1>Weather Dashboard</h1>
+      <section clas="citySearchH2Container">
+        <section class="searchForCity">
+          <div class="row justify-content-left">
+            <div class="col-md-6">
+              <div class="input-group mb-3">
+                <input
+                  type="text"
+                  id="cityInput"
+                  class="form-control"
+                  placeholder="Search for a city using the format City, state"
+                />
+                <button class="btn btn-primary" type="button">Search</button>
+              </div>
+              <div id="button" class="mt-3"></div>
             </div>
-            <div id="button" class="mt-3"></div>
           </div>
-        </div>
-      <div class="container1">
-        <div class="today">
-          <div class="city">
-              <span class="city-name"></span>
-              <span class="wind-speed"></span>
-              <span class="humidity"></span>
+          <div class="container1">
+            <div class="today">
+              <div class="city">
+                <span class="city-name"></span>
+                <span class="wind-speed"></span>
+                <span class="humidity"></span>
+              </div>
+            </div>
           </div>
-      </div>
-      </div>
+        </section>
       </section>
-    </section>
     </header>
     <section class="weatherForecast">
       <div class="container">
