--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
           <div class="row justify-content-left">
             <div class="col-md-6">
               <div class="input-group mb-3">
+                <input
+                  type="text"
+                  id="cityInput"
+                  class="form-control"
+                  placeholder="Search for a city using the format City, state"
+                />
                 <button class="btn btn-primary" type="button">Search</button>
               </div>
               <div id="button" class="mt-3"></div>
