--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     />
   </head>
   <body>
-    <header>
       <h1>Weather Dashboard</h1>
       <section clas="citySearchH2Container">
         <section class="searchForCity">
@@ -48,18 +47,17 @@
               </div>
             </div>
             <div>
-              <div class="row">
+              <section class="rows">
                 <div class="col-sm day1"></div>
                 <div class="col-sm day2"></div>
                 <div class="col-sm day3"></div>
                 <div class="col-sm day4"></div>
                 <div class="col-sm day5"></div>
-              </div>
+              </section>
             </div>
           </div>
         </section>
       </section>
-    </header>
   </body>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="./assets/script.js"></script>
